--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "particles": "^0.3.1",
+    "particles.js": "^2.0.0",
+    "vee-validate": "^3.3.9"
   },
   "devDependencies": {
+    "@mole-inc/nuxt-validate": "^1.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
