--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
     "nuxt": "^2.14.0",
     "particles": "^0.3.1",
     "particles.js": "^2.0.0",
-    "vee-validate": "^3.3.9"
+    "vee-validate": "^3.3.9",
+    "vue-toastification": "^1.7.7"
   },
   "devDependencies": {
     "@mole-inc/nuxt-validate": "^1.1.0",
