--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.12.0",
+    "moment": "^2.28.0",
     "nuxt": "^2.14.0",
     "particles": "^0.3.1",
     "particles.js": "^2.0.0",
