--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "particles": "^0.3.1",
     "particles.js": "^2.0.0",
     "vee-validate": "^3.3.9",
+    "vue-slide-up-down": "^2.0.1",
     "vue-toastification": "^1.7.7"
   },
   "devDependencies": {
