--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
 API_URL_AUTH_SERVICE=https://stage-auth.ec.extyl.pro
-API_URL_OPERATOR_SERVICE=https://main-operator.ec.extyl.pro
+API_URL_OPERATOR_SERVICE=https://stage-operator.ec.extyl.pro
