--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "particles.js": "^2.0.0",
     "vee-validate": "^3.3.9",
     "vue-slide-up-down": "^2.0.1",
+    "vue-the-mask": "^0.11.1",
     "vue-toastification": "^1.7.7"
   },
   "devDependencies": {
